Updated after redis implementation